--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -1,3 +1,3 @@
 <footer class="container-fluid footer">
-Copyright (C) 2016 Chen Qiurong & Neo Ken Hong Kelvin 
+Copyright (C) 2016 Chen Qiurong & Neo Ken Hong Kelvin. All rights reserved. 
 </footer>
