Nice-ify genres

--- a/WebContent/admin/head.html
+++ b/WebContent/admin/head.html
@@ -8,3 +8,5 @@
 <link rel="stylesheet" href="../css/main.css" />
 <link rel="stylesheet" href="css/main.css" />
 <script src='https://www.google.com/recaptcha/api.js?hl=zh-TW'></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.min.js"></script>
