i dunno what i changed

--- a/WebContent/head.html
+++ b/WebContent/head.html
@@ -12,3 +12,5 @@
 <script src='https://www.google.com/recaptcha/api.js'></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.min.js"></script>
+<script type="text/javascript" src="js/rating.js"></script>
+<link rel="stylesheet" href="css/rating.css" type="text/css" media="screen" title="Rating CSS">
