--- a/WebContent/head.html
+++ b/WebContent/head.html
@@ -1,3 +1,4 @@
+<!-- START OF GENERIC HEAD IMPORT -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="js/jquery-1.12.3.min.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
@@ -14,3 +15,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.min.js"></script>
 <script type="text/javascript" src="js/rating.js"></script>
 <link rel="stylesheet" href="css/rating.css" type="text/css" media="screen" title="Rating CSS">
+<!-- END OF GENERIC HEAD IMPORT -->
