--- a/WebContent/admin/head.html
+++ b/WebContent/admin/head.html
@@ -7,6 +7,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="../css/main.css" />
 <link rel="stylesheet" href="css/main.css" />
-<script src='https://www.google.com/recaptcha/api.js?hl=zh-TW'></script>
+<script src='https://www.google.com/recaptcha/api.js'></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.min.js"></script>
