--- a/WebContent/head.html
+++ b/WebContent/head.html
@@ -14,5 +14,6 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.min.js"></script>
 <script type="text/javascript" src="js/rating.js"></script>
+<script type="text/javascript" src="js/handlebars-v4.0.5.js"></script>
 <link rel="stylesheet" href="css/rating.css" type="text/css" media="screen" title="Rating CSS">
 <!-- END OF GENERIC HEAD IMPORT -->
